--- a/parciales/parcial2_mat/server/public/index.html
+++ b/parciales/parcial2_mat/server/public/index.html
@@ -21,12 +21,112 @@
 
 <body>
 
-
-    <header>
-        <div class="row">
-            <div class="logo">
-                <a href="./"><img src="./assets/img/logo.svg" alt="logo"></a>
+    <div class="container-fluid">
+        <header>
+            <div class="logo-nav">
+                <div class="logo">
+                    <a href="./"><img src="./assets/img/logo.svg" alt="logo"></a>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="./nosotros.html"></a>Nosotros</li>
+                        <li><a href="./anuncios.html"></a>Anuncios</li>
+                        <li><a href="./blog.html"></a>Blog</li>
+                        <li><a href="./contact.html"></a>Contacto</li>
+                    </ul>
+                </nav>
             </div>
+
+            <h1>Administracion</h1>
+            <div class="bg"></div>
+        </header>
+
+        <div class="filters">
+            <h4>Filtrar resultados</h4>
+            <div class="row">
+                <div class="col-md-12 col-lg-6">
+                    <div class="field">
+                        <label id="label_f_txtInRow" for="f_txtInRow">Buscar</label>
+                        <input id="f_texto" type="text" name="f_txtInRow" placeholder="Ingrese el texto a buscar">
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="field">
+                        <label for="f_vacuna"><i class="fas fa-syringe"></i> Vacunas</label>
+                        <select id="f_vacuna">
+                            <option value="">Todos</option>
+                            <option value="si">Si</option>
+                            <option value="no">No</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="field">
+                        <label for="f_animal"><i class="fas fa-dog"></i>/<i class="fas fa-cat"></i> Animal</label>
+                        <select id="f_animal">
+                            <option value="">Todos</option>
+                            <option value="perro">Perro</option>
+                            <option value="gato">Gato</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="field">
+                        <label for="f_precio_d"><i class="fas fa-dollar-sign"></i> Precio desde</label>
+                        <input id="f_precio_d" type="number" placeholder="Ingrese mínimo" min="1">
+                    </div>
+                </div>
+
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="field">
+                        <label for="f_precio_h">hasta</label>
+                        <input id="f_precio_h" type="number" placeholder="Ingrese máximo" min="1">
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-lg-3">
+                    <div class="field">
+                        <label for="f_nacido_d"><i class="fas fa-calendar-day"></i> Nacido desde</label>
+                        <input id="f_nacido_d" type="date" placeholder="Ingrese fecha">
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3">
+                    <div class="field">
+                        <label for="f_nacido_h">hasta</label>
+                        <input id="f_nacido_h" type="date" placeholder="Ingrese fecha">
+                    </div>
+                </div>
+            </div>
+
+            <div class="actions">
+                <button id="btnClearFilters" class="primary outline">Limpiar</button>
+                <button id="btnSearch" class="primary"><i class="fas fa-search"></i> Buscar</button>
+            </div>
+        </div>
+        <h3><span>Lista de mascotas</span>
+            <button id="btnNew" class="secondary"><i class="fas fa-plus"></i> Nuevo item </button>
+        </h3>
+
+        <div id="f_columns"></div>
+        <div id="container">
+            <form class="form close" action="#" method="post">
+                <button id="btnCancelX" class="btnClose" title="Cancelar"><i class="fas fa-times"></i></button>
+                <h2 id="formTitle"></h2>
+                <div class="fieldContainer"></div>
+                <div class="actions">
+                    <button id="btnRemove" class="primary outline"><i class="far fa-trash-alt"></i> Eliminar</button>
+                    <button id="btnClear" class="primary outline">Limpiar</button>
+                    <button id="btnCancel" class="primary outline hidden">Cancelar</button>
+                    <button id="btnSubmit" class="primary">Guardar</button>
+                </div>
+            </form>
+        </div><!-- container -->
+
+        <footer>
             <nav>
                 <ul>
                     <li><a href="./nosotros.html"></a>Nosotros</li>
@@ -35,61 +135,10 @@
                     <li><a href="./contact.html"></a>Contacto</li>
                 </ul>
             </nav>
-        </div>
+            <span class="rights">Todos los derechos reservados 2020</span>
 
-        <h1>Administracion</h1>
-        <div class="bg"></div>
-    </header>
-
-    <div class="filters">
-
-        <div id="filter_txtInRow" class="field">
-            <label id="label_f_txtInRow" for="f_txtInRow">buscar</label>
-            <input id="f_txtInRow" type="text" name="f_txtInRow" placeholder="Ingrese el texto a buscar">
-        </div>
-        <!-- <div id="filter_vacunas" class="field">
-            <label id="label_f_vacunas" for="f_vacunas"><i class="fas fa-syringe"></i> f_Vacunas</label>
-            <select id="f_vacunas" name="f_vacunas" required="">
-                <option value="" disabled="" selected="" hidden="">----Elegir----</option>
-                <option id="si" value="si">Si</option>
-                <option id="no" value="no">No</option>
-            </select>
-        </div> -->
-
-
-        <button id="btnSearch" class="primary outline">Buscar</button>
+        </footer>
     </div>
-    <h3>Lista de mascotas
-        <button id="btnNew" class="secondary"><i class="fas fa-plus"></i> Nuevo item </button>
-    </h3>
-
-    <div id="f_columns"></div>
-    <div id="container">
-        <form class="form close" action="#" method="post">
-            <button id="btnCancelX" class="btnClose" title="Cancelar"><i class="fas fa-times"></i></button>
-            <h2 id="formTitle"></h2>
-            <div class="fieldContainer"></div>
-            <div class="actions">
-                <button id="btnRemove" class="primary outline">Eliminar</button>
-                <button id="btnClear" class="primary outline">Limpiar</button>
-                <button id="btnCancel" class="primary outline hidden">Cancelar</button>
-                <button id="btnSubmit" class="primary">Guardar</button>
-            </div>
-        </form>
-    </div><!-- container -->
-
-    <footer>
-        <nav>
-            <ul>
-                <li><a href="./nosotros.html"></a>Nosotros</li>
-                <li><a href="./anuncios.html"></a>Anuncios</li>
-                <li><a href="./blog.html"></a>Blog</li>
-                <li><a href="./contact.html"></a>Contacto</li>
-            </ul>
-        </nav>
-        <span class="rights">Todos los derechos reservados 2020</span>
-
-    </footer>
 </body>
 
 </html>
