--- a/parciales/parcial2_mat/server/public/index.html
+++ b/parciales/parcial2_mat/server/public/index.html
@@ -51,7 +51,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-3">
+                <div class="col-sm-6 col-md-3">
                     <div class="field">
                         <label for="f_vacuna"><i class="fas fa-syringe"></i> Vacunas</label>
                         <select id="f_vacuna">
@@ -62,7 +62,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-3">
+                <div class="col-sm-6 col-md-3">
                     <div class="field">
                         <label for="f_animal"><i class="fas fa-dog"></i>/<i class="fas fa-cat"></i> Animal</label>
                         <select id="f_animal">
@@ -73,7 +73,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-3">
+                <div class="col-sm-6 col-md-3">
                     <div class="field">
                         <label for="f_precio_d"><i class="fas fa-dollar-sign"></i> Precio desde</label>
                         <input id="f_precio_d" type="number" placeholder="Ingrese mínimo" min="1">
@@ -81,20 +81,20 @@
                 </div>
 
 
-                <div class="col-md-6 col-lg-3">
+                <div class="col-sm-6 col-md-3">
                     <div class="field">
                         <label for="f_precio_h">hasta</label>
                         <input id="f_precio_h" type="number" placeholder="Ingrese máximo" min="1">
                     </div>
                 </div>
 
-                <div class="col-md-6 col-lg-3">
+                <div class="col-sm-6 col-md-6 col-lg-3">
                     <div class="field">
                         <label for="f_nacido_d"><i class="fas fa-calendar-day"></i> Nacido desde</label>
                         <input id="f_nacido_d" type="date" placeholder="Ingrese fecha">
                     </div>
                 </div>
-                <div class="col-md-6 col-lg-3">
+                <div class="col-sm-6 col-md-6 col-lg-3 ">
                     <div class="field">
                         <label for="f_nacido_h">hasta</label>
                         <input id="f_nacido_h" type="date" placeholder="Ingrese fecha">
