call jquery & localstorage

--- a/parciales/parcial2_mat/server/public/index.html
+++ b/parciales/parcial2_mat/server/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/styles.css">
+    <script src="./node_modules/jquery/dist/jquery.min.js" type="module"></script>
     <script src="./js/main.js" type="module"></script>
 </head>
 
